# agnosticmlflow

./: .gitignore  LICENSE  README.md
iac/: README.md
iac/cloud/: README.md
iac/local/: README.md
iac/local/beam/: beam-jobserver-deployment.yaml  beam-jobserver-service.yaml
iac/local/flink/: Dockerfile  Dockerfile-python  entrypoint.sh  flink-conf.yaml  flink-data-pvc.yaml  flink-ingress.yaml  flink-master-deployment.yaml  flink-master-service.yaml  flink-tmp-data-pvc.yaml  flink-worker-deployment.yaml  flink-worker-service.yaml
iac/local/minio/: README.md  minio-deployment.yaml  minio-ingress.yaml  minio-service.yaml  minio.crt  minio.key
iac/local/spark/: Dockerfile-spark-standalone  spark-ingress.yaml  spark-master-deployment.yaml  spark-master-service.yaml  spark-worker-deployment.yaml  spark-worker-service.yaml
iac/onprem/: README.md
middleware/: README.md
services/customer-churn/: README.md
services/customer-churn/data_ingestion_app/: Dockerfile  README.md  ingestion-deployment.yaml  kube-config.yaml  pyproject.toml  requirements-docker.txt  requirements.txt
services/customer-churn/data_ingestion_app/scripts/: build.sh  deploy.sh  run.sh
services/customer-churn/data_ingestion_app/src/: main.py
services/customer-churn/trainer/: README.md
services/domain-2/: README.md
